# edu-rust-gigachat-app-backend

./: .env.example  .gitignore  AGENTS.md  CHANGELOG_HTTPIE.md  CHECKLIST_FOR_RELEASE.md  Cargo.toml  LICENSE  PROJECT_AUDIT_REPORT.md  QUICKSTART.md  README.md  TESTING_REPORT_GIGACHAT.md  config.toml  demo_mock.ps1
.beads/: config.yaml  issues.jsonl
docs/: api_examples.md  architecture.md  common_issues.md  cors_for_webapp.md  student_guide.md
examples/: simple_client.rs  test_api.sh
lab/: README.md  beads_guide.md  git_version_control.md  lab_work.md  resources_collection.md
lab-cloud/: lab_yc_serverless_application.md
lab_materials/: README.md  beads_guide.md  git_github_setup.md  group_work_guide.md  lab_work.md  library_reference.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
tests/: integration_test.rs
