[package]
name = "rust-gigachat-demo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Демонстрационный учебный проект на Rust с Rocket и GigaChat API"
license = "MIT"

[dependencies]
# Веб-фреймворк Rocket
rocket = { version = "0.5.1", features = ["json"] }

# Библиотека для работы с GigaChat API
gigalib = { version = "0.1.3", optional = true }

# Асинхронный рантайм
tokio = { version = "1", features = ["full"] }

# Сериализация и десериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Конфигурация приложения
config = "0.14"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Обработка ошибок
thiserror = "1.0"

# Работа с переменными окружения
dotenv = "0.15"

# Асинхронные трейты
async-trait = "0.1"

[dev-dependencies]
# Тестирование
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }

# ==============================================================================
# FEATURES (Фичи) - условная компиляция
# ==============================================================================
#
# Для студентов: Фичи позволяют включать/выключать части кода при компиляции.
#
# Использование:
#   cargo build                    # С фичами по умолчанию (gigachat)
#   cargo build --no-default-features          # Без gigachat (только mock)
#   cargo build --features "gigachat,mock"     # Конкретный набор фич
#
# В коде проверяется так:
#   #[cfg(feature = "gigachat")]   // Код компилируется ЕСЛИ фича включена
#   #[cfg(not(feature = "..."))]   // Код компилируется ЕСЛИ фича ВЫКЛЮЧЕНА
#
[features]
# default - фичи, включённые по умолчанию при cargo build
default = ["gigachat"]

# gigachat - подключает библиотеку gigalib для работы с реальным API
# "dep:gigalib" - синтаксис для optional dependency
gigachat = ["dep:gigalib"]

# mock - маркерная фича (не подключает зависимости)
# Можно использовать для условной компиляции тестовых заглушек
mock = []

[[bin]]
name = "rust-gigachat-demo"
path = "src/main.rs"
